# nasa-apod-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  main.py  pyproject.toml  run_main.bat.example
.github/: copilot-instructions.md
.github/instructions/: ci-cd.instructions.md  kubernetes.instructions.md  python-scripts.instructions.md  terraform.instructions.md
.github/workflows/: lint.yml  test.yml
tests/: test_main.py
