[project]
name = "nasa-apod-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pre-commit>=4.2.0",
]

[tool.flake8]
max-line-length = 88
ignore = ["E501"]
exclude = [".git", "__pycache__", ".venv", "venv"]
