[project]
name = "nasa-apod-scraper"
version = "1.0.0"
description = "Downloads NASA's Astronomy Picture of the Day (APOD) and adds explanation text overlay"
authors = [{ name = "ad0409", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pillow==11.2.1",
    "pytest>=8.4.1",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
]

[project.urls]
Repository = "https://github.com/ad0409/nasa-apod-scraper"

[tool.ruff]
line-length = 88
target-version = "py312"
